--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.catalina.session</groupId>
   <artifactId>RedisStore</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.0-RC1</version>
   <dependencies>
   	<dependency>
   		<groupId>junit</groupId>
@@ -21,7 +21,7 @@
   	<dependency>
   		<groupId>redis.clients</groupId>
   		<artifactId>jedis</artifactId>
-  		<version>0.0.4</version>
+  		<version>1.0.0RC2</version>
   		<type>jar</type>
   		<scope>compile</scope>
   	</dependency>
