--- a/pom.xml
+++ b/pom.xml
@@ -3,48 +3,35 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.apache.catalina.session</groupId>
 	<artifactId>RedisStore</artifactId>
-	<version>1.0.0-RC3</version>
+	<version>1.0.0-RC4-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8.1</version>
-			<type>jar</type>
-			<scope>compile</scope>
+			<version>4.10</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
-			<artifactId>catalina</artifactId>
-			<version>6.0.26</version>
-			<type>jar</type>
-			<scope>compile</scope>
+			<artifactId>tomcat-catalina</artifactId>
+			<version>7.0.23</version>
 		</dependency>
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-			<version>1.5.1</version>
-			<type>jar</type>
-			<scope>compile</scope>
+			<version>2.0.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.jmock</groupId>
-			<artifactId>jmock-junit4</artifactId>
-			<version>2.5.1</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>tomcat</groupId>
+			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-util</artifactId>
-			<version>5.5.23</version>
-			<type>jar</type>
-			<scope>compile</scope>
+			<version>7.0.23</version>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-coyote</artifactId>
+            <version>7.0.23</version>
+        </dependency>
 	</dependencies>
-	<dependencyManagement>
-		<dependencies>
-		</dependencies>
-	</dependencyManagement>
 	<build>
 		<plugins>
 			<plugin>
@@ -52,8 +39,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.0.2</version>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.6</source>
+					<target>1.6</target>
 				</configuration>
 			</plugin>
 		</plugins>
