added a task to copy the runtime libs

--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,8 @@ dependencies {
 
   testCompile 'junit:junit:4.10'
 }
+
+task copyToLib(type: Copy) {
+  into "$buildDir/output/lib"
+  from configurations.runtime
+}
